--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <title>GenkiVape</title>
   </head>
   <body>
